ajustes finais ok, restando login com facebook e esqueci minha senha

--- a/index.html
+++ b/index.html
@@ -352,6 +352,13 @@
                 </div>
             </div>
             <div class="row">
+                <div class="input-field col s12">
+                    <select class="browser-default" id="mentores">
+                      <option value="" disabled selected>Tipo de Mentor Procurado:</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
                 <br>
                 <div class="col s5" style="margin-top: 32px">
                     <button type="button" class="modal-close waves-effect waves-light btn grey">Cancelar</a>
