--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="row">
 
             <a href="#!" class="breadcrumb white-text" id="txtInicio" style="margin-left: 10px;"></a>
+            <a href="#" id="forgetPassword" class="right">Esqueci a senha</a>   
 
             <div class="right" id="btnLogin">
                 <a class="waves-effect waves-light btn blue" id="btnLogar">Entrar</a>
@@ -35,7 +36,6 @@
             <div class="right" id="btnLogout" style="display: none">
                 <a class="waves-effect waves-light btn blue margin-right-10">Sair</a>
             </div>
-
             <div class="input-field col s2 right">
                 <i class="material-icons prefix">lock</i>
                 <input id="inputSenha" type="password" class="validate white-text">
@@ -46,7 +46,6 @@
                 <input id="inputEmail" type="text" class="validate white-text">
                 <label for="inputEmail">Usuário</label>
             </div>
-
         </div>
     </nav>
 
