--- a/facebook.html
+++ b/facebook.html
@@ -73,7 +73,7 @@
   // successful.  See statusChangeCallback() for when this call is made.
   function testAPI() {
     console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me', function(response) {
+    FB.api('/me?fields=name,email', function(response) {
       console.log('Successful login for: ' + response.name);
       console.log(response)
       document.getElementById('status').innerHTML =
